overflow fix

--- a/stylesheets/commons/Brackets.less
+++ b/stylesheets/commons/Brackets.less
@@ -1414,6 +1414,7 @@ div.brkts-opponent-hover-active::after {
 	display: block;
 	overflow-wrap: break-word;
 	white-space: normal;
+	overflow: auto;
 }
 
 .brkts-popup-sc-body {
